# anomaly-detection

./: .gitignore  Makefile  README.md  pyproject.toml
notebooks/: analysis.ipynb
report/: report.tex
src/: data_loader.py  datasets.py  ensemble.py  experiment.py  main.py  models.py
tests/: test_data_loader.py  test_ensemble.py  test_experiment.py  test_models.py
