[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anomaly-detection"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.12.0",
    "pyod>=1.1.0",
    "mlflow>=2.12.0",
    "tqdm>=4.66.0",
    "ipykernel>=7.2.0",
    "seaborn>=0.13.2",
    "ipywidgets>=8.1.8",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=9.0.2",
    "ruff>=0.12.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "SIM",
    "RET",
    "ARG",
    "PIE",
    "PTH",
    "RUF",
    "S",
]
ignore = [
    "S101",
    "N802",
    "N803",
]
fixable = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.uv.sources]
clustbench = { git = "https://github.com/Ashail33/clustbench.git" }
